[gd_scene load_steps=3 format=3 uid="uid://b7itybws07qlf"]

[ext_resource type="Theme" uid="uid://djjqt2b2o1qrm" path="res://themes/default_theme.tres" id="1_o5qli"]
[ext_resource type="Script" uid="uid://dwv1l014kif8n" path="res://scripts/menu/main_menu.gd" id="2_0wfyh"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o5qli")
script = ExtResource("2_0wfyh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Discus Battle Gladiator"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
text = "Start Game"

[node name="MultiplayerButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
text = "Multiplayer"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../StartButton")
text = "Quit"

[node name="PingVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 10

[node name="PingButton" type="Button" parent="MarginContainer/VBoxContainer/PingVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Ping"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/PingVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[node name="PongVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 10

[node name="PongButton" type="Button" parent="MarginContainer/VBoxContainer/PongVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Pong"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/PongVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[node name="MultiButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 10

[node name="ServerButton" type="Button" parent="MarginContainer/VBoxContainer/MultiButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Server"

[node name="ClientButton" type="Button" parent="MarginContainer/VBoxContainer/MultiButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Client"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/MultiButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/MultiplayerButton" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PingVBox/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PongVBox/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MultiButtonsVBox/ServerButton" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MultiButtonsVBox/ClientButton" to="." method="_on_client_button_pressed"]
